# BreadthX_AI

./: .gitignore  HOW_TO_RUN.txt  PROJECT_WORKFLOW.txt  README.md  app.py  db_setup.sql  main.py  pyproject.toml  requirements.txt  walkthrough.md
backend/: .env  config.py  database.py  main.py  requirements.txt
backend/auth/: dependencies.py  email.py  jwt.py
backend/models/: __init__.py  prediction.py  user.py
backend/routes/: auth.py  history.py  predict.py
backend/schemas/: prediction.py  user.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: Navbar.jsx  ProtectedRoute.jsx  SplashScreen.jsx
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Dashboard.jsx  History.jsx  Login.jsx  Profile.jsx  Signup.jsx  Test.jsx
frontend/src/services/: api.js
ml/: dataset.py  inference.py  model.py  train.py
scratch/: check_db.py  migrate_db.py  test_db.py  test_email.py  test_signup.py  verify_schema.py
static/: index.html  script.js  style.css
