[project]
name = "cough-identification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.1",
    "kaggle>=2.1.0",
    "librosa>=0.11.0",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "python-dotenv>=1.2.2",
    "python-multipart>=0.0.26",
    "scikit-learn>=1.8.0",
    "torchcodec>=0.11.1",
    "uvicorn>=0.46.0",
]
